@@ -48,6 +48,7 @@ SUCH DAMAGE.
   <li><a href="intro.html">Introduction</a>
   <ul>
     <li><a href="intro.html#overview">Overview</a>
+    <li><a href="intro.html#newvsold">New vs Old framework</a>
     <li><a href="intro.html#free">Is GXemul Free software?</a>
     <li><a href="intro.html#build">How to compile/build the emulator</a>
     <li><a href="intro.html#run">How to run the emulator</a>
